---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2025-04-29
  Changes:
    - Reduce package size
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025-04-29
  Major Features:
    - When Distant Misfires is installed, Smart rounds now have a strong homing effect
    - Minimum factorio version is now 2.0.46 to use new API features
  Changes:
    - Reduced electronic circuits cost of smart rounds from 2 to 1 (to reflect reduced cost of piercing ammo)
  Compatibility:
    - Ensure Voidblock preserves surface conditions for crafting smart rounds, no easy cheap ammo for the biters that don't exist!
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-04-24
  Bugfixes:
    - Fix load error when Voidcraft is not installed
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-04-24
  Major Features:
    - Space science packs now cost 2 Electronic circuits instead of 2 Iron plates (optional)
    - Smart rounds magazine are now craftable in space (optional)
  Changes:
    - Import graphics and remove dependency on Wooden Universe Assets
  Compatibility:
    - When BZ Tin is installed, Alternative carbonic asteroid crushing (Crushing Industry replaces this)
---------------------------------------------------------------------------------------------------
Version: 1.2.2
  Changes:
    - Add cupric asteroids to asteroid productivity
---------------------------------------------------------------------------------------------------
Version: 1.2.1
  Bugfixes:
    - All cupric asteroids tried to convince you they were "Small"