@@ -14,6 +14,7 @@
     "fdsl >= 0.1.5",
     "space-age",
     "? distant-misfires",
+    "(?) bztin",
     "(?) Rocky-Asteroids"
   ],
   "space_travel_required": true
