@@ -17,6 +17,7 @@ cupric-asteroid-chunk=An asteroid chunk with high copper content.
 [recipe-name]
 cupric-asteroid-crushing=Cupric asteroid crushing
 cupric-asteroid-reprocessing=Cupric asteroid reprocessing
+cupric-asteroid-crushing-tin=Cupric asteroid crushing for tin
 advanced-cupric-asteroid-crushing=Advanced cupric asteroid crushing
 
 [technology-name]
