@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
-Date: ????
-  Changes:
+Date: 2025-05-10
+  Compatibility:
+    - BZ Tin compatibility is now handled with an alternative cupric asteroid crushing recipe that yields tin
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025-04-29
